Fixed shift in headerbar when click on app-menu
see #447

--- a/Communitheme/gtk-3.0/_common.scss
+++ b/Communitheme/gtk-3.0/_common.scss
@@ -1551,9 +1551,8 @@ headerbar {
     }
   }
 
-  &:first-child { border-right-width: 0; }
-  &:dir(rtl):last-child { border-left-width: 0; }
-  &:dir(ltr):last-child { border-left-width: 0; }
+  &:not(:only-child):first-child { border-right-width: 0; }
+  &:not(:only-child):not(:first-child) { border-left-width: 0; };
 
   & {
     // style headerbar buttons and entries using the appropriate headerbar colors
